--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="input-card card1">
       <div class="card-thumb">
         <p>Put your text in here</p>
+        <button id="submit" class="button">Submit</button>
       </div>
       <textarea id="input">
       </textarea>
@@ -67,7 +68,7 @@
   <div class="container-fluid section-footer">
     <div class="content">
       <h2>Did this tool help?</h2>
-      <p>Support my work by checking out <a href="http://saqif.com" target="_blank">saqif.com</a></p>
+      <p>Support other work like this by checking out <a href="http://saqif.com" target="_blank">saqif.com</a></p>
     </div>
   </div>
 </div>
