--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>DecomprEssay</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"><meta charset="utf-8">
-<meta name="description" content="">
-<meta name="keywords" content="">
+<meta name="description" content="Essay too short? Increase any essay length up to 500% with DecomprEssay.">
+<meta name="keywords" content="Expand,essay,word,count">
 <meta name="author" content="Saqif Badruddin">
 <!-- favicon -->
 <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
