overhaul UI with svg clouds and paper

--- a/app.html
+++ b/app.html
@@ -11,8 +11,9 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <!-- bs3 grid -->
   <link href="css/grid12.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
@@ -26,20 +27,22 @@
 
   <!-- Add your site or application content here -->
 
-  <div class="container-fluid center-flex">
+  <div class="container-fluid center-flex section-hero-app">
     <div class="col-md-6">
       <div class="content text-center">
         <h1>DecomprEssay</h1>
         <h6>Don't add fluff to your essay. Decompress it.</h6>
       </div>
+      <div class="spacer">
+      </div>
     </div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid section-1">
     <div class="col-md-offset-2 col-md-4">
       <div class="input-card">
         <div class="card-thumb">
-          <p>Text input</p>
+          <h2>Text input</h2>
         </div>
         <textarea id="input">
         </textarea>
@@ -50,19 +53,13 @@
     <div class="col-md-4">
       <div class="input-card">
         <div class="card-thumb">
-          <p>Text output</p>
+          <h2>Text output</h2>
         </div>
         <textarea disabled id="newText">
         </textarea>
       </div>
     </div>
   </div>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 
   <div class="container-fluid footer center-flex">
     <div class="col-md-6 text-center">
